# vtkviz

./: .gitignore  README.md  TODO.txt  example.py  pyproject.toml  vtkVisualization.py
examples/: example.py
legacy/: vtkVisualization.py
src/vtkviz/: __init__.py  point_cloud.py  renderer.py  utils.py  vtk_surfaces.py  widgets.py
