[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vtkviz"
version = "0.1.0"
description = "Lightweight VTK-based visualization utilities"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "vtk",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
